setting page alignment fixed

--- a/app/src/sass/style.scss
+++ b/app/src/sass/style.scss
@@ -607,16 +607,17 @@ main{
 }
 
 .setting-main{
-  height: 100%;
+ 
   #container{
-    height: 100%;
+    height: 125%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
     .content{
       font-size: 1.2rem;
-      height: 40vh;
+      height: 60vh;
       display: flex;
       align-items: center;
       justify-content: center;
